# claude-shepherd

./: CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: spec-implement.md  tdd.md
docs/: contracts.md  sdk-notes.md  spec-implement-explainer.html  spec-implement-skill-requirements.md  tdd-skill-requirements.md
skills/spec-implement/: SKILL.md
skills/spec-implement/references/: bootstrap_prompt.md  design_prompt.md  impl_prompt.md  playbook.md  requirements_prompt.md  testgen_prompt.md  verifier_coverage_prompt.md  verifier_triage_prompt.md
skills/spec-implement/scripts/: spec_implement.py  spec_implement_agent.py  spec_implement_bootstrap.py  spec_implement_contracts.py  spec_implement_fake_runner.py  spec_implement_git.py  spec_implement_hooks.py  spec_implement_loop0.py  spec_implement_loop1.py  spec_implement_loop2.py  spec_implement_loop3.py  spec_implement_scan.py  spec_implement_state.py  spec_implement_trace.py
skills/tdd/: SKILL.md
skills/tdd/references/: bootstrap_prompt.md  design_prompt.md  gherkin_prompt.md  impl_prompt.md  playbook.md  requirements_prompt.md  testgen_prompt.md  verifier_coverage_prompt.md  verifier_triage_prompt.md
skills/tdd/scripts/: tdd.py  (+14 more)
templates/: config.yaml  gitignore.snippet
tests/: conftest.py  test_bootstrap.py  test_cli_exitcodes.py  test_contracts.py  test_e2e.py  test_fake_runner.py  test_git_helpers.py  test_hooks.py  test_loop0.py  test_loop1.py  test_loop2.py  test_loop3.py  test_resolution.py  test_scan.py  test_slugify_and_state.py  test_trace.py  test_wsl.py
