[project]
name = "claude-shepherd"
version = "0"
description = "Claude Code plugin packaging engineering workflows (the TDD engine + skills)."
requires-python = ">=3.10"

# Not an installable package: the engine scripts run via `python3 skills/tdd/
# scripts/tdd.py` and are imported flat (conftest puts that dir on sys.path),
# never as a package. This file exists only to declare the dev/test toolchain
# and tool config, so `uv sync` reproduces the documented environment.
[tool.uv]
package = false

# Dev/test toolchain. pyyaml and claude-agent-sdk are the engine's only
# non-stdlib runtime imports (config I/O and the SDK seam); they live here
# because there is no installable package to attach runtime deps to.
[dependency-groups]
dev = [
    "claude-agent-sdk",
    "pytest",
    "pyyaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
